--- a/super/PROJECT/CALCULATOR/calculator.html
+++ b/super/PROJECT/CALCULATOR/calculator.html
@@ -8,7 +8,7 @@
 <body >
 
   <div style="justify-items:center;">
-  <h1>Calculator</h1>
+  <h1> Tiger's Calculator</h1>
 
   <p> <!-- 7 -->
     <button title="7" onclick="
@@ -24,7 +24,7 @@
   
     <!-- 9 -->
     <button title="9" onclick="
-    calculation += '9';
+    calculation +='9';
     console.log(calculation)">9</button>
   
     <!-- multiplication -->
@@ -54,14 +54,13 @@
     <button title="minus"
     onclick=" calculation += '-';
     console.log(calculation)">-</button>
-  
+
   </p>
   
   <p>
 
       <!-- 1 -->
       <button title="1" onclick="
-      //calculation += '1';
       calculation += '1';
       console.log(calculation)">1</button>
       
@@ -78,7 +77,7 @@
     
       <!-- add button  -->
       <button title="add" onclick="
-      calculation += '+'
+      calculation += '+';
       console.log(calculation)">+</button>
   </p>
   
@@ -101,7 +100,7 @@
   
   <!-- delete button -->
     <button title="delete" onclick="
-    calculation = calculation;
+    calculation = '0';
     console.log(calculation)
     ">AC</button>
   
