--- a/super/super.html
+++ b/super/super.html
@@ -204,6 +204,13 @@ The logical OR ( || ) operator also takes two expressions:
 
  There are three different ways the || operator can be evaluated:
 
+<h5>SCOPE :</h5>  
+
+1. Lexical
+2.Global scope: cannot access the functional scope 
+3.Functional scope :can access the global scope 
+Block scope : can access the function.  
+
 </p>
 
 
