update and deleted function file

--- a/super/07-functions.html
+++ b/super/07-functions.html
@@ -3,65 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>functions</title>
+    <title>rock</title>
   </head>
   <body>
-    <h1>FUNCTIONS</h1>
-    <p>
-      Functions allows us to reuse code - functions allows us to update the work
-      return statement lets us get a value out of a function You use the
-      camelCase to write the name of the function - Call/run the function -
-    </p>
-
-    function function1(){ console.log("hello") console.log(2+2) }
-
-    <h3>Return</h3>
-    Return: gets a value out of a function // return something from a function.
-    // when this function gets called will result in the value; // return ends
-    the function that is being called
-    <br />
-
-    <h3>Parameters:</h3>
-    parameter: puts a value into the function parameter works the same as the
-    variable: we can save a value inside the parameter -Use the camelCase
-    -Parameter only exist inside the function scope
     <div class="rock">
       <h2>ROCK PAPER SCISSORS GAMES</h2>
+      <h3>Rules</h3>
 
       <p>
-        <b
-          >rules of the game is that rock beats scissor,paper beats rocks,
-          scissor beats paper :
+        <b>
+          <li>rock beats scissor</li>
+          <li>paper beats rocks</li>
+          <li>scissor beats paper</li>
         </b>
-        <br />Therefore is you pick rock and computer picks scissors, you win
+        Therefore is you pick rock and computer picks scissors, you win
       </p>
-
-      <p>
-        ROCK PAPER SCISSOR
-        <br />
-        steps: to complete a task: convert to code: the computer randomly
-        selects the move compare the moves to the the results display the
-        results in a popup
-      </p>
-
-      <!-- rock -->
-      <!-- 
-      b>Options: generate a random number </b>
-        <li>if randomNumber is between 0-1/3 = rock</li>
-        <li>if randomNumber is between 1/3-2/3 = paper</li>
-        <li>if randomNumber is between 2/3-1 = scissor</li>
-      -->
 
       <!-- rock button -->
-      <button
-        onclick="
+      <button class="rock" onclick="
       // this calls the playGame function 
       playGame('rock')"
       >
         Rock
       </button>
 
-      <!-- paper-->
+      <!-- paper button -->
       <button
         class="paper"
         onclick="
@@ -70,86 +36,70 @@
         Paper
       </button>
 
-      <!-- scissors -->
-      <button
-        class="scissor"
-        onclick="
+      <!-- scissors button  -->
+      <button class="scissor" onclick="
       playGame('scissors'); "
-      >
-        Scissor
+      > Scissor
       </button>
+
     </div>
 
     <!-- java script -->
     <script>
-      function function1() {
-        return "hello";
-        console.log(2 + 2);
+      // computer move
+      function pickComputerMove() {
+        const randomNumber = Math.random();
+        let computerMove = ''
+
+        if(randomNumber >= 0 && randomNumber < 1/3) {
+          computerMove = 'rock';
+        } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+          computerMove = "paper";
+        } else if (randomNumber >= 2 / 6 && randomNumber < 1) {
+          computerMove = "scissors";
+        }
+        return computerMove;
       }
-      function1(); // calling the function/running the function
 
-      // This functions takes a parameter named tax1
-      function tax(tax1) {
-        console.log(tax1 * 1);
-      }
-      tax(200); // passing a value into the function= parameter, is an argument(200),
-
-      // Rock paper, scissors work
-      // this variable is a global scope and can now be used anywhere
-      function playGame(playerMove) {
-        const computerMove = pickComputerMove();
-
-        //if the computer move is rock and button is rock the results equals
-
+      function playGame(userPick) {
+        const computerMove = pickComputerMove(); // calling the computer move. 
         let results = "";
 
-        if (playerMove === "scissors") {
+        if (userPick === "rock") {
           if (computerMove === "rock") {
-            results = "You loose, Computer wins";
-          } else if (computerMove === "paper") {
-            results = "You win";
-          } else if (computerMove === "scissor") {
-            results = "Its a tie";
-          }
-        } else if (playerMove === "paper") {
-          if (computerMove === "rock") {
-            results = "You win";
-          } else if (computerMove === "paper") {
-            results = "Its a tie";
+            results = "You tie";
+          }else if (computerMove === "paper") {
+            results = "You loose";
           } else if (computerMove === "scissors") {
-            results = "You loose, Computer wins";
+            results = "You win";
           }
-        } else if (playerMove === "rock") {
+        } else if (userPick === "paper") {
           if (computerMove === "rock") {
-            results = "its a tie";
+            results = "You win";
           } else if (computerMove === "paper") {
-            results = "You loose, Computer wins";
-          } else if (computerMove === "scissor") {
+            results = "You tie";
+          } else if (computerMove === "scissors") {
+            results = "You loose";
+          }
+        } else if(userPick === "rock") {
+          if (computerMove === "rock") {
+            results = "You tie";
+          }else if (computerMove === "paper") {
+            results = "You loose";
+          }else if (computerMove === "scissors") {
             results = "You win";
           }
         }
 
         // create a popup
-        alert(
-          `You picked ${playerMove}, Computer picked ${computerMove}. Results=${results}`
+        alert( `You picked ${userPick}, Computer picked ${computerMove}. Results=${results}`
         );
+
+        return results; 
+
       }
 
-      // computer move
-      function pickComputerMove() {
-        const randomNumber = Math.random();
-        let compMove = "";
-
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-          // Have the computer move :
-          compMove = "rock";
-        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-          compMove = "paper";
-        } else if (randomNumber >= 2 / 6 && randomNumber < 1) {
-          compMove = "scissor";
-        }
-        return compMove;
-      }
+      
     </script>
   </body>
 </html>
