--- a/super/super.html
+++ b/super/super.html
@@ -290,22 +290,48 @@ Block scope : can access the function.
  operator returns the left side's truthy value and completes.
  2. If the left-side expression is falsey, the || operator returns the right side's value (regardless
  of whether it's truthy or falsey) and completes</b>
- 
 
-
+</div>
 <br>
+<div class="cs-seven">
+  <h2>LESSON 7: FUNCTIONS </h2>
+  <p>
+    <b>Function:</b> allows us to reuse, and update the code
+    <br>  
+    Rules for functions
+    <br> 
+    <li>Can't use special words like: <b>function</b></li>
+    <li>Can't start with a number</li>
+    <li> Can't start with a special character (%$£"")</li>
+    <li><b>Use camelCase to name a function</b></li>
+
+    <h4>Return</h4>
+    Return: allows us to get a value out of a function // return something from a function.
+    // when this function gets called will result in the value; // return ends
+    the function that is being called
+    <br />
+
+    <h4>Parameters:</h4>
+    parameter: puts a value into the function parameter works the same as the
+    variable: we can save a value inside the parameter -Use the camelCase
+    -Parameter only exist inside the function scope
+
+  </p>
+
+</div>
 <br>
  <div class="cs-notes">
   <ol>
     <li>How do you remove the bullet in an li element? </li>
-    <li></li>
+    <li>How can i make using switch easy?</li>
+    <li> </li>
   </ol>
  </div>
 
-</div>
 
 
-<div class="cs-eight"></div>
+
+
 <div class="cs-nine"></div>
 
 <hr>
