update and deleted function file

--- a/super/lesson.html
+++ b/super/lesson.html
@@ -22,17 +22,15 @@
 <hr>
 <!-- LESSON 5 VARIABLES -->
   <h3>Lesson 5: Variables and Data Types:</h3>
+  <p>Learning about giving name to variable by using const,let, and var </p>
 
   <button title ="1" onclick="
   calculator+='1';
-
   console.log(calculator)
-  ">
-  1</button>
-  
+  "> 1</button>
+
   <button title="2" onclick="
   calculator+='2'
-
   console.log(calculator)"
   >2</button>
   
@@ -50,42 +48,27 @@
   console.log(`${calculators}`)
   ">=</button>
 
-<!--  -->
   <p class="js-results"></p>
 
 <hr>
 
-
-
-
-<p><b>Lesson 6 </b>
+  <h3>Lesson 6: Booleans/ If else and Logical Operators:</h3>
+  <p>Learning about the True/False, greater and less than while using the if else statement</p>
   <br>
-  Generate a random number: if the number is less that 0.5 display heads, else tails. Create variable of results. if trying to guess, create a variable called guess that equals tails or head.  if guess matches results display 'you win ' else 'you lose'. Instead of if statements, switch it to ternary operator (condition? A:B) </p>
 
 <hr>
 <!-- Lesson 7  -->
  <h3>Lesson 7:Functions  </h2>
 
-  <p>Functions:
-    <li><b>Allows us to reuse the code</b></li>
-    <li><b>Allows us to update the function in the future</b></li>
-  <li>We use the camelCase when naming a function. </li>
-    <li>You cannot name your function with special characters such as (%$@"?)</li>
-    <li>Don't name a function (function)</li>
-    <li>You cannot start or name a function with numbers </li>
-
-    Return: <b>Lets us get a value out of a function</b>
+  <p>Functions: Allows us to reuse and update the code</b></li>
 </p>
 
 <p>
-  <h3>Rock Paper Scissor Game: </h3>
+  <h3>Rock Paper Scissor Game: Example </h3>
   <!-- buttons -->
   <button onclick="playGame('rock')">Rock</button >
-
   <button onclick="playGame('paper')">Paper</button>
-
   <button onclick="playGame('scissors')">Scissors</button>
-
 </p>
 
 <hr>
