--- a/super/super.html
+++ b/super/super.html
@@ -143,10 +143,9 @@
 
 <h2>CONDITIONALS AND IF ELSE STATEMENTS  </h2>
 <br>
- <h3>IF, ELSE, AND ELSE-IF STATEMENTS</h3>
+ <h3>IF, ELSE, AND ELSE-IF STATEMENTS and SWITCH STATEMENT:</h3>
 
  <p>If statements: allows us to write multiple groups of code and decides which code gets to run
-
   <br>
 
   <h3>Ternary: shortcut for ifelse</h3>
@@ -154,6 +153,7 @@
   function isCat(cat){
     return cat === "tiger"?"Hi tiger you are cute": `Hi ${cat}`; 
     }
+
   <br>
     You can store the ternary in a variable 
     const cat = "tiger"? "Hi tiger": "Hi cat person";
@@ -212,27 +212,9 @@ The logical OR ( || ) operator also takes two expressions:
 Block scope : can access the function.  
 
 </p>
-
-
-<h3>SWITCH</h3>
-<b>
-  function switchName(name){
-    switch(name){
-      case "sherlyne":
-        return "Hi sherlyne"
-      case "james":
-        return "Hi james nice to meet you"
-      default: 
-      return `Hi ${name}`
-    }
-   }
-</b>
-<br>
-
- <h4>example 2</h4>
- <p>
-  let age = 50; // condition 
+ 
  <br> 
+ <p>example of an if else statement: 
     if (age>18){
       console.log("you can drive")
     }else if (age < 0 && age < 18 ){
@@ -242,20 +224,6 @@ Block scope : can access the function.
     }
     <b>will return "you cannot drive"</b>
  </p>
-
-    <br>
-    <h4>example 3</h4>
-    <p>function isRose(cat){
-  if(cat === "rose")// con{
-    return "Hi rose"
-  }else if (cat typeof cat ==="string"){
-    return `Hi &{cat}`
-  }else {
-    return "sorry pass in a cat name"
-  }
- }
-</p>
-
 
  <table>
   <tr>
@@ -320,6 +288,11 @@ Block scope : can access the function.
 
 </div>
 <br>
+
+<div class="cs-eight"></div>
+
+<div class="cs-nine"></div>
+<br>
  <div class="cs-notes">
   <ol>
     <li>How do you remove the bullet in an li element? </li>
@@ -327,15 +300,6 @@ Block scope : can access the function.
     <li> </li>
   </ol>
  </div>
-
-
-
-
-
-<div class="cs-nine"></div>
-
-<hr>
-
 
   <script src="super.js" > 
   </script>
