added parseFloat to equalsign function

--- a/super/07-rockfunc.html
+++ b/super/07-rockfunc.html
@@ -61,6 +61,7 @@
         return computerMove;
       }
 
+      // takes the userPick as (parameter)
       function playGame(userPick) {
         const computerMove = pickComputerMove(); // calling the computer move. 
         let results = "";
