added some objects

--- a/super/super.html
+++ b/super/super.html
@@ -289,7 +289,17 @@ Block scope : can access the function.
 </div>
 <br>
 
-<div class="cs-eight"></div>
+<div class="cs-eight">
+  <H3>LESSON8: OBJECTS</H3>
+  <p><b>Objects: </b> Groups multiple values together
+    
+  
+  
+  
+  
+  </p>
+
+</div>
 
 <div class="cs-nine"></div>
 <br>
