--- a/super/PROJECT/COIN/coin.html
+++ b/super/PROJECT/COIN/coin.html
@@ -10,6 +10,11 @@
     <h3>Guess the coin flip</h3>
 
     <button onclick="console.log(playGame())">Head or Tails</button>
+      <!-- Reset button -->
+     <button onclick="
+        score.win = 0;
+        score.losses = 0; 
+     ">Reset Button</button>
 
     <h3>Results: </h3>
     <p class="js-user-pick"></p>
