--- a/super/super.html
+++ b/super/super.html
@@ -290,8 +290,46 @@ Block scope : can access the function.
 <br>
 
 <div class="cs-eight">
-  <H3>LESSON8: OBJECTS</H3>
-  <p><b>Objects: </b> Groups multiple values together
+  <H3>LESSON 8: OBJECTS</H3>
+  <p><b>Objects: </b> Groups multiple values together 
+    - Allow to use multiple values together. 
+
+
+  <h3>JSON BUILT OBJECT</h3>
+
+JSON.stringify(Object): used to convert an object to a JSON BUILT OBJECT 
+JSON.parse(JSON): used to covert JSON OBJECT to a javascript object
+
+  <!-- Reset button -->
+     <button onclick="
+        score.win = 0;
+        score.losses = 0; 
+     ">Reset Button</button>
+
+
+</ul><h3>LOCAL STORAGE</h3>
+LOCAL STORAGE: Used to <b> permanently store data</b>
+- The data stored in local storage is accessible
+<br><br>
+- 1. To store/set data use 
+<b>localStorage.setItem("key/message","value")
+</b>
+<br> 
+<br>
+To get the items
+<b>localStorage.getItem("key/message"): 
+</b>
+<br>
+<br>
+To delete items/ single items
+<b>localStorage.removeItem("key");
+</b>
+<br>
+<br>
+To clear the all the items 
+<br>
+<b>localStorage.clear(key):
+</b>
     
   
   
