--- a/super/PROJECT/ROCK/rock.html
+++ b/super/PROJECT/ROCK/rock.html
@@ -36,6 +36,13 @@ scissor beats paper
     
     <button onclick="playTheGame('scissors')">Scissors</button>
 
+    <!-- Reset button -->
+     <button onclick="
+     score.wins = 0;
+     score.losses = 0; 
+     score.ties = 0; 
+     ">Reset score </button>
+
     <p class="js-results"></p>
 
 
