--- a/super/super.html
+++ b/super/super.html
@@ -293,6 +293,9 @@ Block scope : can access the function.
   <H3>LESSON 8: OBJECTS</H3>
   <p><b>Objects: </b> Groups multiple values together 
     - Allow to use multiple values together. 
+    We have <b>Bracket Notation and Dot Notation</b>
+
+  
 
 
   <h3>JSON BUILT OBJECT</h3>
