--- a/super/super.html
+++ b/super/super.html
@@ -290,24 +290,27 @@ Block scope : can access the function.
 <br>
 
 <div class="cs-eight">
-  <H3>LESSON 8: OBJECTS</H3>
+  <h3>LESSON 8: OBJECTS</h3>
   <p><b>Objects: </b> Groups multiple values together 
     - Allow to use multiple values together. 
-    We have <b>Bracket Notation and Dot Notation</b>
+    We have <b>Bracket Notation [] and Dot Notation (object.property)</b>
+  <br><br>
 
-  
-
-
-  <h3>JSON BUILT OBJECT</h3>
+<h3>JSON BUILT OBJECT</h3>
 
 JSON.stringify(Object): used to convert an object to a JSON BUILT OBJECT 
 JSON.parse(JSON): used to covert JSON OBJECT to a javascript object
 
+<!-- button -->
+ <br>
+ <button onclick="playHeadTails()
+ ">Win/Loose</button>
+
   <!-- Reset button -->
      <button onclick="
-        score.win = 0;
-        score.losses = 0; 
-     ">Reset Button</button>
+        scores.wins = 0;
+        scores.losses = 0; 
+     ">Reset score</button>
 
 
 </ul><h3>LOCAL STORAGE</h3>
