update bracket section

--- a/super/super.html
+++ b/super/super.html
@@ -296,21 +296,23 @@ Block scope : can access the function.
     We have <b>Bracket Notation [] and Dot Notation (object.property)</b>
   <br><br>
 
-<h3>JSON BUILT OBJECT</h3>
-
-JSON.stringify(Object): used to convert an object to a JSON BUILT OBJECT 
-JSON.parse(JSON): used to covert JSON OBJECT to a javascript object
-
-<!-- button -->
- <br>
- <button onclick="playHeadTails()
- ">Win/Loose</button>
+  <h4>Heads tails example </h4>
+  <br>
+  <button onclick="playHeadTails()
+ ">Heads/Tails</button>
 
   <!-- Reset button -->
      <button onclick="
         scores.wins = 0;
         scores.losses = 0; 
      ">Reset score</button>
+
+<br><br>
+
+<h3>JSON BUILT OBJECT</h3>
+
+<p>JSON.stringify(Object): used to convert an object to a JSON BUILT OBJECT 
+JSON.parse(JSON): used to covert JSON OBJECT to a javascript object</p>
 
 
 </ul><h3>LOCAL STORAGE</h3>
