created a reset button for rock.html and rock.js also added JSON OBJECT and Lccal Storage

--- a/super/PROJECT/ROCK/rock.html
+++ b/super/PROJECT/ROCK/rock.html
@@ -41,6 +41,8 @@ scissor beats paper
      score.wins = 0;
      score.losses = 0; 
      score.ties = 0; 
+     // remove the score from the local storage 
+    localStorage.removeItem('score')
      ">Reset score </button>
 
     <p class="js-results"></p>
