--- a/super/super.html
+++ b/super/super.html
@@ -355,28 +355,31 @@ Block scope : can access the function.
   <b>JSON.parse(JSON): used to covert JSON OBJECT to a javascript object</b></p>
 
   <br>
-</ul><h3>LOCAL STORAGE</h3>
+</ul><h3>WE USE LOCAL STORAGE TO STORE DATA </h3>
 LOCAL STORAGE: Used to <b> permanently store data</b>
 - The data stored in local storage is accessible
 <br><br>
 - 1. To store/set data use 
-<b>localStorage.setItem("key/message","value")
+<b>localStorage.setItem("key/message","value") or 
+  <b>
+// Store the scores permanently use the localStorage.setItem(name=value,value="string")
+  </b>
 </b>
 <br> 
 <br>
 To get the items
-<b>localStorage.getItem("key/message"): 
+<b>localStorage.getItem("key/name"): 
 </b>
 <br>
 <br>
 To delete items/ single items
-<b>localStorage.removeItem("key");
+<b>localStorage.removeItem("key/name");
 </b>
 <br>
 <br>
 To clear the all the items 
 <br>
-<b>localStorage.clear(key):
+<b>localStorage.clear(key/name):
 </b>
     
   
