--- a/super/super.html
+++ b/super/super.html
@@ -360,10 +360,10 @@ LOCAL STORAGE: Used to <b> permanently store data</b>
 - The data stored in local storage is accessible
 <br><br>
 - 1. To store/set data use 
-<b>localStorage.setItem("key/message","value") or 
-  <b>
-// Store the scores permanently use the localStorage.setItem(name=value,value="string")
+<b>localStorage.setItem("key/message","value") or <b>
+    Store the scores permanently use the localStorage.setItem(name=value,value="string")
   </b>
+  
 </b>
 <br> 
 <br>
@@ -396,7 +396,7 @@ To clear the all the items
   <ol>
     <li>How do you remove the bullet in an li element? </li>
     <li>How can i make using switch easy?</li>
-    <li> </li>
+    <li> How do you underline the words or headings? </li>
   </ol>
  </div>
 
