--- a/super/PROJECT/AMAZON/amazon.html
+++ b/super/PROJECT/AMAZON/amazon.html
@@ -15,10 +15,13 @@
 
     <h4>ITEMS IN THE STORE: </h4>
     <!-- Selected Items -->
-     <p>Shoes:<span class ="js-shoe-span"> </span>
-    </p>
-    <!-- Show the quantity -->
+     
+    <p><b>update the items: Check the remove cart, before updating the quantity, check if it will go below 0; if it will create a popup saying Not enough items in the cart, and dont update the quantity; 
 
+<!-- Shoe -->
+ <li>Shoes:<span class ="js-shoe-span"> </span>
+    <li>
+    <!-- Show the quantity -->
     <p class="js-show-quantity"></p>
 
     <button 
@@ -54,10 +57,9 @@
         Buy now
     </button>
 
-    <p><b>update the items: Check the remove cart, before updating the quantity, check if it will go below 0; if it will create a popup saying Not enough items in the cart, and dont update the quantity; 
-
-
     </b></p>
+    
+    <!-- Basket Ball  -->
      <li>Basketball: <span class ="js-basket-span"></span></li>
      <button 
      class="cs-add" title="Add to cart" onclick= 
@@ -92,6 +94,7 @@
         Buy now
     </button>
 
+    <!-- Toaster -->
     <li>Toaster: <span class ="js-toaster-span"></span></li>
     <button 
      class="cs-add" title="Add to cart" onclick= 
@@ -125,6 +128,8 @@
         ">
         Buy now
     </button>
+
+    <!-- T-shirt -->
      <li>T-Shirt: <span class ="js-shirt-span"></span></li>
      <button 
      class="cs-add" title="Add to cart" onclick= 
