--- a/super/super.html
+++ b/super/super.html
@@ -381,16 +381,12 @@ To clear the all the items
 <br>
 <b>localStorage.clear(key/name):
 </b>
-    
-  
-  
-  
-  
-  </p>
-
+</p>
 </div>
 
-<div class="cs-nine"></div>
+<div class="cs-nine">
+  
+</div>
 <br>
  <div class="cs-notes">
   <ol>
