added DOM manipulation into super.js

--- a/super/super.html
+++ b/super/super.html
@@ -383,9 +383,22 @@ To clear the all the items
 </b>
 </p>
 </div>
-
+<br>
 <div class="cs-nine">
-  
+  <h2>LESSON9: DOM</h2>
+  <p><b>DOM: Document Object Model:</b> its a built in object provided by js. that combines javascript and HTML together 
+  <br>
+  <b>DOM PROPERTIES</b>
+  <li>document.title = </li>
+  <li>document.body</li>
+
+<br>
+   document.innerHTML = 'Hello'
+  <b>It combines javascript and HTML together.</b>
+  </p>
+  <button>hello</button>
+
+
 </div>
 <br>
  <div class="cs-notes">
